@@ -3,6 +3,7 @@ Gnumeric 1.12.60
 Morten:
 	* Fix problem with whole-column references in ods.  [#797]
 	* ODS Export and import of marker fill and outline opacity.  [#796]
+	* ODS Export and import of graph line stroke opacity.  [#796]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.59
